# KAN-CUDA

./: CMakeLists.txt  CMakePresets.json  README.md
include/: csv_reader.h  kan_cuda_kernels.h  kan_model.h  preprocess.h
src/: csv_reader.cpp  kan_cuda_kernels.cu  kan_model.cpp  preprocess.cpp  train.cpp
